--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -1,9 +1,11 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: "androidx.navigation.safeargs.kotlin"
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.google.gms.google-services'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-parcelize'
+    id 'com.google.secrets_gradle_plugin' version "0.5"
+}
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -130,8 +132,13 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
 
     //Maps & Geofencing
-    implementation "com.google.android.gms:play-services-location:$playServicesVersion"
-    implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
+    implementation 'com.google.android.libraries.maps:maps:3.1.0-beta'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    // Quick Permission Library
+    implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.0'
+
 
 
 }
+apply plugin: 'com.google.gms.google-services'
