--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        maven { url "http://jitpack.io/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
@@ -24,6 +24,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "http://jitpack.io/" }
     }
 }
 
