--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext.kotlinVersion = '1.4.32'
-    ext.navigationVersion = "2.3.4"
-
+    ext.navigationVersion = '2.3.4'
+    ext.hilt_version = '2.33-beta'
     repositories {
         google()
         jcenter()
@@ -14,7 +14,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath 'com.google.gms:google-services:4.3.5'
-
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
