--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
 
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     // Architecture Components
     //Navigation dependencies
     implementation 'androidx.appcompat:appcompat:1.2.0'
