--- a/starter/app/src/main/AndroidManifest.xml
+++ b/starter/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
     <application
         android:name=".MyApp"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="true">
+        android:theme="@style/AppTheme">
         <activity android:name="com.udacity.project4.view.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,16 +26,15 @@
             </intent-filter>
 
         </activity>
+
         <meta-data
             android:name="com.google.android.gms.versions"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value= "${MAP_API}" />
-        <receiver
-            android:name="com.udacity.project4.utils.GeofenceBroadcastReceiver"
-            android:enabled="true"
-            android:exported="true" />
+            android:value="${MAP_API}" />
+
+        <receiver android:name="com.udacity.project4.utils.GeofenceBroadcastReceiver" />
         <service
             android:name="com.udacity.project4.utils.GeofenceTransitionsJobIntentService"
             android:exported="true"
