fix: Databinding & Livedata errors in Saving reminder * Koin sharedviewmodel is used in SelectLocationFragment.kt & SaveReminderFragment.kt for setting location details and saving the reminder.
Obeservation: Notification is triggering at right time.

--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -44,6 +44,16 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -59,6 +69,11 @@ dependencies {
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
+
+    // Truth
+    testImplementation "com.google.truth:truth:1.1.2"
+    androidTestImplementation "com.google.truth:truth:1.1.2"
+
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -123,9 +138,9 @@ dependencies {
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
 
-    /*// Koin - DI
+    // Koin - DI
     implementation "org.koin:koin-android:$koinVersion"
-    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"*/
+    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
 
     // Hit - DI
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -139,7 +154,7 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-auth:20.0.3'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
 
     //Maps & Geofencing
