Chores: FragmentReminderDetailsTest.kt done with test success

--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -19,8 +19,8 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
-        /*testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"*/
-        testInstrumentationRunner "com.udacity.project4.androidTest.KoinTestRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        /*testInstrumentationRunner "com.udacity.project4.androidTest.KoinTestRunner"*/
     }
     buildTypes {
         release {
