--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
     testImplementation "org.robolectric:robolectric:$robolectricVersion"
     testImplementation "org.robolectric:annotations:$robolectricVersion"
-    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation 'org.mockito:mockito-inline:2.24.5'
     testImplementation "com.google.truth:truth:1.1.2"
 
     // AndroidX Test - JVM testing
@@ -171,3 +171,7 @@ dependencies {
 
 }
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-allopen'
+allOpen {
+    annotation('com.udacity.project4.OpenForTesting')
+}
